[package]
name = "u"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = "0.19.3"
gloo = "0.6.1"
serde = "1.0.136"
serde_json = "1.0.79"
stylist = { version = "0.10.0", features = ["yew"]}
wasm-bindgen = "0.2.29"
web-sys = { version = "0.3.56", features = ["HtmlInputElement"]}
yew-router = "0.16.0"